# sp-rag

./: .env.example  answer_with_rag.py  chuncking.py  download_html.py  main.py  output.md  pdf_to_md.py  pyproject.toml  readme.md  requirements.txt  settings.py  vectorize.py  view_db.py
local/: docker-compose.yml
src/: database.py  downloader.py  generator.py  main.py  models.py  preprocessor.py  retriever.py  settings.py  vectorizer.py
src/sp_rag/: __init__.py  database.py  downloader.py  generator.py  models.py  preprocessor.py  retriever.py  settings.py  vectorizer.py
src/sp_rag/utils/: logs.py
